Lors de l'ouverture des boosters - Afficher 5 cartes aléatoirement